# snakeos-rs

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/kernel/: Cargo.toml
src/kernel/src/: display.rs  gdt.rs  main.rs  memory.rs  world.rs
src/kernel/src/game2048/: world.rs
