[package]
name = "snakeos"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["src/kernel"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
bootloader = "0.11"
kernel = { path = "src/kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
